--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
+		"@unocss/extractor-svelte": "^0.61.0",
 		"svelte": "^4.2.7",
 		"svelte-check": "^3.6.0",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
+		"unocss": "^0.61.0",
 		"vite": "^5.0.3"
 	},
 	"type": "module",
